--- a/index.html
+++ b/index.html
@@ -8,13 +8,13 @@
     <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
-    <header>
+    <header id="#header">
         <nav>
             <ul>
                 <li><a href="#stack">Stack Tecnológico</a></li>
                 <li><a href="#proyectos">Proyectos</a></li>
                 <li><a href="#certificados">Certificados</a></li>
-                <li><a href="#contacto">Medios de Contacto</a></li>
+                <li><a href="#contacto">Contacto</a></li>
             </ul>
         </nav>
     </header>
@@ -78,7 +78,7 @@
                     Además, agregaremos emocionantes funcionalidades nuevas para brindarte una experiencia completa y 
                     conveniente en tu dispositivo móvil.
                 </p>
-                <a href="https://github.com/usuario/proyecto2" target="_blank">Ver en GitHub</a>
+                <a href="https://github.com/GardeningFriendTeam/GardeningFriendApp" target="_blank">Ver en GitHub</a>
             </div>
             <div class="proyecto">
                 <h3>ArtMaster</h3>
@@ -89,7 +89,7 @@
                     buscan iniciarse en esta rama del arte. 
                     Podrás seguir distintas rutas de aprendizaje dependiendo de tu objetivo.
                 </p>
-                <a href="https://github.com/usuario/proyecto2" target="_blank">Ver en GitHub</a>
+                <a href="https://github.com/maxtheprogrammer98/ArtMaster" target="_blank">Ver en GitHub</a>
             </div>
             <div class="proyecto">
                 <h3>OdinAI</h3>
@@ -179,7 +179,7 @@
 
         <!-- Sección de Contacto -->
         <section id="contacto">
-            <h2>Medios de Contacto</h2>
+            <h2>Contacto</h2>
             <ul class="contacto-list">
                 <li>Email: <a href="mailto:braianoviedo2141@gmail.com">braianoviedo2141@gmail.com</a></li>
                 <li>LinkedIn: <a href="https://linkedin.com/in/braian-m-oviedo" target="_blank">linkedin.com/in/braian-m-oviedo</a></li>
@@ -192,6 +192,9 @@
         <p>&copy; 2024 Braian Maximiliano Oviedo - Todos los derechos reservados</p>
     </footer>
 
+    <button id="scrollTopBtn" title="Volver arriba">&#8679;</button>
+
+    <script src="js/script.js"></script>
     <script src="js/model.js"></script>
     <script src="js/slider.js"></script>
 </body>
