--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
                     buscan iniciarse en esta rama del arte. 
                     Podrás seguir distintas rutas de aprendizaje dependiendo de tu objetivo.
                 </p>
-                <a href="https://github.com/maxtheprogrammer98/ArtMaster" target="_blank">Ver en GitHub</a>
+                <a href="https://github.com/BraianOviedo/ArtMaster" target="_blank">Ver en GitHub</a>
             </div>
             <div class="proyecto">
                 <h3>OdinAI</h3>
@@ -102,34 +102,34 @@
                     También se incorporan otras funcionalidades como reconocimiento visual para 
                     manejar las colecciones de una forma mas interactiva e innovadora.
                 </p>
-                <a href="https://github.com/usuario/proyecto2" target="_blank">Ver en GitHub</a>
+                <a href="https://github.com/BraianOviedo/OdinAI" target="_blank">Ver en GitHub</a>
             </div>
             <div class="proyecto">
                 <h3>CreArte [En Proceso]</h3>
-                <a href="#" class="preview button" data-project="odinAI">Preview</a>
+                <a href="#" class="preview button" data-project="creArte">Preview</a>
                 <p>
                     Esta app es una red social especializada para artistas visuales, 
                     a diferencia de otras plataformas esta app incentiva 
                     la creación de contenido de calidad por lo que tu trabajo si 
                     será realmente apreciado y bienvenido aquí! 
                 </p>
-                <a href="https://github.com/usuario/proyecto2" target="_blank">Ver en GitHub</a>
+                <a href="https://github.com/maxtheprogrammer98/CreArte" target="_blank">Ver en GitHub</a>
             </div>
             <div class="proyecto">
                 <h3>DAILO [En Proceso]</h3>
-                <a href="#" class="preview button" data-project="odinAI">Preview</a>
+                <a href="#" class="preview button" data-project="dailo">Preview</a>
                 <p>
                     App Android para la gestión de rutinas.
                 </p>
-                <a href="https://github.com/usuario/proyecto2" target="_blank">Ver en GitHub</a>
+                <a href="https://github.com/BraianOviedo/DAILO" target="_blank">Ver en GitHub</a>
             </div>
             <div class="proyecto">
                 <h3>AppiStock [En Proceso]</h3>
-                <a href="#" class="preview button" data-project="odinAI">Preview</a>
+                <a href="#" class="preview button" data-project="appiStock">Preview</a>
                 <p>
                     Web destinada a la gestión del comercio
                 </p>
-                <a href="https://github.com/usuario/proyecto2" target="_blank">Ver en GitHub</a>
+                <a href="https://github.com/" target="_blank">Ver en GitHub</a>
             </div>
         </section>
 
@@ -192,7 +192,7 @@
         <p>&copy; 2024 Braian Maximiliano Oviedo - Todos los derechos reservados</p>
     </footer>
 
-    <button id="scrollTopBtn" title="Volver arriba">&#8679;</button>
+    <button id="scrollTopBtn" title="Volver arriba">UP</button>
 
     <script src="js/script.js"></script>
     <script src="js/model.js"></script>
