--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                     <li>JavaScript</li>
                     <li>TypeScript</li>
                     <li>Python</li>
-                    <li>MySQLite</li>
+                    <li>MySQL Server</li>
                     <li>Java</li>
                     <li>Kotlin</li>
                 </ul>
@@ -60,23 +60,28 @@
                 <h3>Gardening Friend - Web</h3>
                 <a href="#" class="preview button" data-project="gardeningWeb">Preview</a>
                 <p>
-                    Gardening Friend es una aplicación que cuenta con una versión web y móvil. 
-                    El propósito de nuestro proyecto a quienes buscan iniciarse en el mundo de los cultivos y 
-                    la jardinería orgánica pero no tienen los conocimientos necesarios. 
-                    Nuestro proyecto es el perfecto punto de partida, ya que proveemos información y 
-                    recursos fáciles de comprender. </p>
+                    Gardening Friend es una aplicación disponible en versiones web y 
+                    móvil diseñada para aquellos interesados en iniciarse en la jardinería orgánica. 
+                    Proporciona recursos accesibles y comprensibles para aprender sobre el cultivo de 
+                    plantas y huertos, siendo una excelente herramienta educativa para principiantes en el 
+                    campo. 
+                </p>
+                <p>
+                    Stack [HTML, CSS, TypeScript, Python, MySQL, Angular, Django]
+                </p>
                 <a href="https://github.com/GardeningFriendTeam/GardeningFriendWeb" target="_blank">Ver en GitHub</a>
             </div>
             <div class="proyecto">
                 <h3>Gardening Friend - App</h3>
                 <a href="#" class="preview button" data-project="gardeningApp">Preview</a>
                 <p>
-                    ¡Bienvenido al repositorio de Gardening Friend, 
-                    la aplicación nativa de Android para entusiastas de la jardinería y la agricultura! 
-                    Esta aplicación se basa en nuestra aplicación web Gardening Friend y 
-                    ofrece información, consejos y tutoriales sobre cultivos y huertos. 
-                    Además, agregaremos emocionantes funcionalidades nuevas para brindarte una experiencia completa y 
-                    conveniente en tu dispositivo móvil.
+                    Esta versión nativa de Android de Gardening Friend lleva la experiencia de la 
+                    jardinería directamente a tu dispositivo móvil. Basada en la versión web, 
+                    esta aplicación ofrece información práctica, tutoriales, y consejos para jardineros y 
+                    entusiastas de la agricultura, con la adición de funcionalidades optimizadas para móviles.
+                </p>
+                <p>
+                    Stack [Java, JavaXML, Firebase]
                 </p>
                 <a href="https://github.com/GardeningFriendTeam/GardeningFriendApp" target="_blank">Ver en GitHub</a>
             </div>
@@ -84,10 +89,13 @@
                 <h3>ArtMaster</h3>
                 <a href="#" class="preview button" data-project="artMaster">Preview</a>
                 <p>
-                    La app brinda una forma sencilla y 
-                    amigable de aprender dibujo realista para aquellos quienes 
-                    buscan iniciarse en esta rama del arte. 
-                    Podrás seguir distintas rutas de aprendizaje dependiendo de tu objetivo.
+                    Una aplicación amigable para aprender dibujo realista, 
+                    ArtMaster está dirigida a principiantes que buscan desarrollar sus habilidades 
+                    artísticas. La app ofrece rutas de aprendizaje personalizadas 
+                    según el objetivo del usuario, facilitando un avance progresivo en esta disciplina.
+                </p>
+                <p>
+                    Stack [Kotlin, Jetpack Compose, Firebase]
                 </p>
                 <a href="https://github.com/BraianOviedo/ArtMaster" target="_blank">Ver en GitHub</a>
             </div>
@@ -95,12 +103,13 @@
                 <h3>OdinAI</h3>
                 <a href="#" class="preview button" data-project="odinAI">Preview</a>
                 <p>
-                    Este proyecto es una app web desarrollada en Angular que brinda el servicio de un chatbot 
-                    basado en uno de los LLMs provistos por Groq. 
-                    Permite realizar cualquier tipo de consulta en forma de texto y 
-                    guardar las respuestas en colecciones que el mismo usuario puede crear. 
-                    También se incorporan otras funcionalidades como reconocimiento visual para 
-                    manejar las colecciones de una forma mas interactiva e innovadora.
+                    Odin AI es una app web que integra un chatbot basado en modelos de lenguaje de Groq. 
+                    Los usuarios pueden hacer consultas de texto y organizar las respuestas en colecciones 
+                    personalizadas. La plataforma también ofrece reconocimiento visual, 
+                    permitiendo una interacción más avanzada e innovadora con las colecciones.
+                </p>
+                <p>
+                    Stack [HTML, Sass, TypeScript, Angular, Firebase]
                 </p>
                 <a href="https://github.com/BraianOviedo/OdinAI" target="_blank">Ver en GitHub</a>
             </div>
@@ -108,10 +117,14 @@
                 <h3>CreArte [En Proceso]</h3>
                 <a href="#" class="preview button" data-project="creArte">Preview</a>
                 <p>
-                    Esta app es una red social especializada para artistas visuales, 
-                    a diferencia de otras plataformas esta app incentiva 
-                    la creación de contenido de calidad por lo que tu trabajo si 
-                    será realmente apreciado y bienvenido aquí! 
+                    CreArte es una red social especializada para artistas visuales, 
+                    donde el enfoque está en la calidad del contenido. A diferencia de otras plataformas, 
+                    CreArte incentiva la creación de obras destacadas, 
+                    brindando un espacio donde los artistas pueden exponer su 
+                    trabajo de manera apreciada y valorada.
+                </p>
+                <p>
+                    Stack [Kotlin, Jetpack Compose, Firebase]
                 </p>
                 <a href="https://github.com/maxtheprogrammer98/CreArte" target="_blank">Ver en GitHub</a>
             </div>
@@ -119,7 +132,13 @@
                 <h3>DAILO [En Proceso]</h3>
                 <a href="#" class="preview button" data-project="dailo">Preview</a>
                 <p>
-                    App Android para la gestión de rutinas.
+                    Una app de Android diseñada para la gestión de rutinas diarias. 
+                    Los usuarios pueden crear y personalizar diferentes rutinas, 
+                    recibir notificaciones según la frecuencia establecida, 
+                    y hacer seguimiento de su progreso mediante un sistema de rachas.
+                </p>
+                <p>
+                    Stack [Kotlin, Jetpack Compose, Firebase]
                 </p>
                 <a href="https://github.com/BraianOviedo/DAILO" target="_blank">Ver en GitHub</a>
             </div>
@@ -127,7 +146,13 @@
                 <h3>AppiStock [En Proceso]</h3>
                 <a href="#" class="preview button" data-project="appiStock">Preview</a>
                 <p>
-                    Web destinada a la gestión del comercio
+                    Web que permite a los comerciantes gestionar su 
+                    inventario de manera eficiente. Los usuarios pueden registrar productos, 
+                    realizar un seguimiento de las existencias, y obtener reportes detallados para 
+                    mantener un control preciso del inventario.
+                </p>
+                <p>
+                    Stack [HTMX, Python, Django, PostgreSQL]
                 </p>
                 <a href="https://github.com/" target="_blank">Ver en GitHub</a>
             </div>
